exports[`>>>R E D U C E R --- Test calculatorReducers +++ reducer with shapshot 1`] = `
Object {
  "output": 0,
  "posts": Array [],
}
`;

exports[`>>>R E D U C E R --- Test calculatorReducers +++ reducer with shapshot 2`] = `
Object {
  "output": 60,
  "posts": Array [],
}
`;
